welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
		test = true;
                       ^sleepIn:6: error: type mismatch;
 found   : Boolean(false)
 required: Int
		test = false;	
                       ^sleepIn:8: error: type mismatch;
 found   : Int
 required: Boolean
	return test;
               ^