welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
var test = 0;
	if(weekday && !vacation){
		test = true;
	}else{
		test = false;	
	}
	return test;
}
